# portmap-ai

./: .dockerignore  .gitignore  CHANGELOG.md  PORTMAP_AI_CODEX_PHASE_19_40_HANDOFF.md  PORTMAP_AI_HANDOFF.md  PORTMAP_AI_NEXT_SESSION.md  SECURITY.md  docker-compose.yml  portmap_agent.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scriptsrun_orchestrator.bat  test_instructions.md
.github/workflows/: ci.yml
ai_agent/: README.txt  analyzer_stub.py  anomaly_trainer.py  baseline_store.py  behavior_model.py  interface.py  ml_data_logger.py  ml_model_scorer.py  payload_classifier.py  recommendation_engine.py  remediation.py  retrain_model.py  scoring.py  threat_correlation.py
cli/: README.txt  __init__.py  dashboard.py  logs.py  main.py  portmap_scan.py  real_time_agent.py  remediator.py  runtime.py
config/profiles/: default.json  raspberry_pi.json
core_engine/: README.txt  agent_identity.py  agent_service.py  ai_firewall.py  audit_events.py  behavior_profiler.py  command_audit.py  config_loader.py  config_validation.py  control_plane.py  dispatcher.py  enrollment.py  enterprise_audit.py  enterprise_auth.py  firewall_hooks.py  inbound_monitor.py  launch_candidate.py  licensing.py  log_exporter.py  logging_utils.py  master_node.py  network_control.py  orchestrator.py  orchestrator_service.py  os_fingerprints.json  platform_utils.py  provisioning.py  rbac.py  remediation_safety.py  risky_ports.py  runtime_setup.py  security.py  service_fingerprints.json  stack_launcher.py  telemetry_framing.py  time_utils.py  tls_utils.py  visibility.py  visibility_history.py  worker_node.py
core_engine/advisory/: __init__.py  workflow.py
core_engine/aggregation/: __init__.py  collector.py  conflict_resolution.py  merger.py
core_engine/api/: __init__.py  app.py  response.py  routes_assets.py  routes_events.py  routes_health.py  routes_nodes.py  routes_snapshots.py  routes_topology.py
core_engine/attribution/: __init__.py  behavior_graph.py  confidence_models.py  learning_profiles.py  probabilistic_apps.py  signature_learning.py
core_engine/behavior/: __init__.py  drift_detection.py  environment_drift.py
core_engine/capture/: __init__.py  adapters.py  filters.py  manager.py  models.py  sessions.py  statistics.py
core_engine/cluster/: __init__.py  job_queue.py  scheduler.py  worker_registry.py
core_engine/correlation/: __init__.py  baseline.py  delta.py  scoring.py
core_engine/default_configs/: master1.json
core_engine/deployment/: __init__.py  backup_plans.py  deployment_summary.py  manifests.py  migration_plans.py  node_profiles.py  operator_views.py  profile_validation.py  restore_plans.py  runtime_profiles.py  service_lifecycle.py  service_providers.py  upgrade_readiness.py
core_engine/deprecated/: README.md  agent_role.py  node_controller.py  packet_processor.py  simulator.py
core_engine/diagnostics/: __init__.py  fixture_mutation.py  relay_simulator.py  schema_validation.py
core_engine/events/: __init__.py  bus.py  models.py  queue.py  serializer.py
core_engine/export/: __init__.py  bundle.py  coordinated_bundle.py  node_manifest.py  redaction.py
data/: settings.json
docker/: master.Dockerfile  orchestrator.Dockerfile  worker.Dockerfile
docs/: CLI_REFERENCE.md  COMPLETION_ROADMAP.md  DEPLOYMENT.md  MILESTONE_INTEGRATION.md  MILESTONE_J_INTEGRATION.md  MILESTONE_K_INTEGRATION.md  MILESTONE_L_INTEGRATION.md  MILESTONE_M_INTEGRATION.md  MILESTONE_N_INTEGRATION.md  MILESTONE_O_INTEGRATION.md  MILESTONE_P_INTEGRATION.md  MILESTONE_Q_INTEGRATION.md  MILESTONE_R_INTEGRATION.md  MILESTONE_S_INTEGRATION.md  MILESTONE_T_INTEGRATION.md  MILESTONE_U_INTEGRATION.md  MILESTONE_V_INTEGRATION.md  MILESTONE_W_INTEGRATION.md  MILESTONE_X_INTEGRATION.md  MILESTONE_Y_INTEGRATION.md  MILESTONE_Z_INTEGRATION.md  PHASE_105_110_PLAN.md  PHASE_111_116_PLAN.md  PHASE_117_122_PLAN.md  PHASE_123_128_PLAN.md  PHASE_129_134_PLAN.md  PHASE_135_140_PLAN.md  PHASE_141_146_PLAN.md  PHASE_147_152_PLAN.md  PHASE_153_158_PLAN.md  PHASE_159_164_PLAN.md  PHASE_165_170_PLAN.md  PHASE_44_53_PLAN.md  PHASE_54_58_PLAN.md  PHASE_59_64_PLAN.md  PHASE_65_70_PLAN.md  PHASE_71_76_PLAN.md  PHASE_77_82_PLAN.md  PHASE_87_92_PLAN.md  PHASE_93_98_PLAN.md  (+183 more)
gui/: README.txt  __init__.py  app.py  visualization.py
logs/: connection_log.jsonl
saas/: __init__.py  cloud_sync.py  licensing.py  orgs.py  tenancy.py
sandbox_sim/: sample_training_data.json
scripts/: README.md  generate_certs.py  install_systemd_user.sh  package_local.sh  run_dashboard.bat  run_dashboard.sh  run_integration_tests.sh  run_master.bat  run_master.sh  run_orchestrator.bat  run_orchestrator.sh  run_smoke_tests.sh  run_stack.py  run_worker.bat  run_worker.sh  setup_environment.bat  setup_environment.sh
tests/: test_active_federation_validation.py  test_adaptive_remediation_logic.py  test_adaptive_risk_weighting.py  test_agent_service.py  test_ai_correlation_layer.py  test_ai_interface.py  test_asset_classifier.py  test_asset_inventory_intelligence.py  test_async_scanner.py  test_audit_events.py  test_audit_logging_governance.py  test_autonomous_enforcement_modes.py  test_backup_restore_planning.py  test_baseline_aging_decay.py  test_behavior_correlation.py  test_behavior_model.py  test_behavioral_drift_detection.py  test_behavioral_intelligence_operator_summary.py  test_bidirectional_flow_reconstruction.py  test_capture_framework.py  test_cli_config_validate.py  test_cli_main.py  test_cloud_relay_infrastructure.py  test_cluster_runtime_health.py  test_cluster_scanning.py  test_command_audit.py  test_compliance_profiles.py  test_config_loader.py  test_config_validation.py  test_container_deployment_readiness.py  test_control_plane.py  test_coordinated_export_bundle.py  test_cross_node_relationship_mapping.py  test_cross_platform_filesystem_export_safety.py  test_cross_platform_firewall_provider_readiness.py  test_cross_platform_packet_capture_readiness.py  test_cross_platform_runtime_detection.py  test_cross_platform_validation_summary.py  test_cve_client.py  test_dashboard_foundation.py  (+163 more)
(+374 files in other folders)
