[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portmap-ai"
version = "0.1.0"
description = "Local distributed network observability, telemetry analysis, and remediation workflow dashboard."
readme = "docs/README.txt"
requires-python = ">=3.11"
dynamic = ["dependencies"]
authors = [
  {name = "PortMap-AI Contributors"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: System :: Networking",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
portmap = "cli.main:main"
portmap-agent = "portmap_agent:main"
portmap-dashboard = "cli.dashboard:main"
portmap-export-logs = "cli.logs:main"
portmap-master = "core_engine.master_node:main"
portmap-orchestrator = "core_engine.orchestrator:main"
portmap-worker = "core_engine.worker_node:main"

[tool.setuptools]
include-package-data = true
py-modules = ["portmap_agent"]

[tool.setuptools.packages.find]
include = ["ai_agent*", "cli*", "core_engine*", "gui*", "saas*"]

[tool.setuptools.package-data]
core_engine = ["default_configs/*.json", "os_fingerprints.json", "service_fingerprints.json"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.data-files]
"share/portmap-ai/config/profiles" = [
  "config/profiles/default.json",
  "config/profiles/raspberry_pi.json",
]
"share/portmap-ai/systemd" = [
  "deploy/systemd/portmap-ai-stack.service",
  "deploy/systemd/portmap-ai-worker.service",
]
"share/portmap-ai/scripts" = [
  "scripts/install_systemd_user.sh",
]
"share/portmap-ai/gui/web" = [
  "gui/web/README.md",
]
"share/portmap-ai" = [
  "CHANGELOG.md",
  "PORTMAP_AI_CODEX_PHASE_19_40_HANDOFF.md",
  "SECURITY.md",
]
"share/portmap-ai/docs" = [
  "docs/README.txt",
  "docs/CLI_REFERENCE.md",
  "docs/COMPLETION_ROADMAP.md",
  "docs/DEPLOYMENT.md",
  "docs/PORTMAP_AI_FINAL_ROADMAP.md",
  "docs/MILESTONE_INTEGRATION.md",
  "docs/MILESTONE_J_INTEGRATION.md",
  "docs/MILESTONE_K_INTEGRATION.md",
  "docs/MILESTONE_L_INTEGRATION.md",
  "docs/MILESTONE_M_INTEGRATION.md",
  "docs/MILESTONE_N_INTEGRATION.md",
  "docs/MILESTONE_O_INTEGRATION.md",
  "docs/MILESTONE_P_INTEGRATION.md",
  "docs/MILESTONE_Q_INTEGRATION.md",
  "docs/MILESTONE_R_INTEGRATION.md",
  "docs/MILESTONE_S_INTEGRATION.md",
  "docs/MILESTONE_T_INTEGRATION.md",
  "docs/MILESTONE_U_INTEGRATION.md",
  "docs/MILESTONE_V_INTEGRATION.md",
  "docs/MILESTONE_W_INTEGRATION.md",
  "docs/MILESTONE_X_INTEGRATION.md",
  "docs/PHASE_59_64_PLAN.md",
  "docs/PHASE_65_70_PLAN.md",
  "docs/PHASE_71_76_PLAN.md",
  "docs/PHASE_77_82_PLAN.md",
  "docs/PHASE_87_92_PLAN.md",
  "docs/PHASE_93_98_PLAN.md",
  "docs/PHASE_99_104_PLAN.md",
  "docs/PHASE_105_110_PLAN.md",
  "docs/PHASE_111_116_PLAN.md",
  "docs/PHASE_117_122_PLAN.md",
  "docs/PHASE_123_128_PLAN.md",
  "docs/PHASE_129_134_PLAN.md",
  "docs/PHASE_135_140_PLAN.md",
  "docs/PHASE_141_146_PLAN.md",
  "docs/PHASE_147_152_PLAN.md",
  "docs/PHASE_HISTORY.md",
  "docs/ROADMAP.md",
  "docs/SECURITY_MODEL.md",
  "docs/api_reference.md",
  "docs/alerting_siem_integrations.md",
  "docs/architecture.md",
  "docs/asset_inventory_intelligence.md",
  "docs/adaptive_remediation_logic.md",
  "docs/adaptive_risk_weighting.md",
  "docs/ai_behavioral_learning.md",
  "docs/ai_layer.md",
  "docs/ai_payload_classification.md",
  "docs/ai_recommendation_engine.md",
  "docs/backup_restore_planning.md",
  "docs/autonomous_enforcement_modes.md",
  "docs/bidirectional_flow_reconstruction.md",
  "docs/beginner_guide.md",
  "docs/behavior_correlation.md",
  "docs/behavioral_drift_detection.md",
  "docs/behavioral_intelligence_operator_summary.md",
  "docs/baseline_aging_decay.md",
  "docs/configuration.md",
  "docs/coordinated_export_bundles.md",
  "docs/cross_node_relationship_mapping.md",
  "docs/cve_intelligence.md",
  "docs/cross_platform_firewall_provider_readiness.md",
  "docs/cross_platform_filesystem_export_safety.md",
  "docs/cross_platform_packet_capture_readiness.md",
  "docs/cross_platform_runtime_detection.md",
  "docs/cross_platform_validation_summary.md",
  "docs/cluster_runtime_health.md",
  "docs/dashboard_data_providers.md",
  "docs/dashboard_foundation.md",
  "docs/deployment_options.md",
  "docs/deployment_manifest_generation.md",
  "docs/deployment_operator_summary.md",
  "docs/deep_packet_inspection.md",
  "docs/diagnostic_relay_simulator.md",
  "docs/docker_deployment.md",
  "docs/dynamic_topology_correlation.md",
  "docs/dynamic_application_attribution.md",
  "docs/distributed_cluster_scanning.md",
  "docs/distributed_event_propagation.md",
  "docs/distributed_node_state_sync.md",
  "docs/distributed_review_queue.md",
  "docs/distributed_visibility_aggregation.md",
  "docs/dns_threat_analytics.md",
  "docs/enterprise_cloud_orchestration.md",
  "docs/dns_visibility_mode.md",
  "docs/dns_destination_behavior_learning.md",
  "docs/encrypted_orchestration_transport.md",
  "docs/enterprise_security.md",
  "docs/federated_topology_aggregation.md",
  "docs/federation_dashboard_api_readiness.md",
  "docs/federation_diagnostics.md",
  "docs/federation_runtime_manager.md",
  "docs/flow_telemetry_enrichment.md",
  "docs/flow_reconstruction.md",
  "docs/gateway_mode_validation.md",
  "docs/gateway_router_log_ingestion.md",
  "docs/span_mirror_port_readiness.md",
  "docs/trusted_peer_lifecycle.md",
  "docs/runtime_exchange_scheduler.md",
  "docs/active_federation_validation.md",
  "docs/event_pipeline.md",
  "docs/firewall_plugins.md",
  "docs/high_speed_scan_engine.md",
  "docs/historical_flow_baselines.md",
  "docs/historical_replay_windows.md",
  "docs/historical_network_timeline.md",
  "docs/historical_snapshot_persistence.md",
  "docs/ioc_intelligence_framework.md",
  "docs/interactive_topology_visualization.md",
  "docs/ipv6_dual_stack.md",
  "docs/risk_dashboard_models.md",
  "docs/logging_audit.md",
  "docs/live_cluster_state_synchronization.md",
  "docs/live_packet_ingestion.md",
  "docs/live_scan_snapshot_deduplication.md",
  "docs/local_api.md",
  "docs/local_storage.md",
  "docs/long_term_intelligence_operator_summary.md",
  "docs/long_term_topology_evolution.md",
  "docs/local_visibility_operator_tooling.md",
  "docs/macos_socket_collection_validation.md",
  "docs/master_roadmap.md",
  "docs/metadata_stream_parser.md",
  "docs/milestone_v_live_runtime_integration.md",
  "docs/multi_node_fleet_visibility.md",
  "docs/network_control_layer.md",
  "docs/node_coordination.md",
  "docs/network_topology_intelligence.md",
  "docs/network_asset_inventory.md",
  "docs/operator_review_queue_integration.md",
  "docs/operational_export_bundle.md",
  "docs/os_fingerprinting.md",
  "docs/packaging.md",
  "docs/packet_capture.md",
  "docs/packet_metadata_correlation.md",
  "docs/passive_interface_discovery.md",
  "docs/persistent_topology_state.md",
  "docs/policy_review_engine.md",
  "docs/policy_runtime_engine.md",
  "docs/plugin_registry.md",
  "docs/platform_abstraction.md",
  "docs/protocol_metadata_extraction.md",
  "docs/quarantine_isolation_provider_readiness.md",
  "docs/production_runtime_profiles.md",
  "docs/process_service_attribution.md",
  "docs/protocol_dissectors.md",
  "docs/quick_start.md",
  "docs/raspberry_pi_deployment.md",
  "docs/real_device_validation.md",
  "docs/realtime_telemetry_dashboard.md",
  "docs/rbac_operator_permissions.md",
  "docs/remote_operator_visibility_prep.md",
  "docs/release_candidate.md",
  "docs/remediation_safety.md",
  "docs/resource_aware_historical_retention.md",
  "docs/risk_escalation_pipelines.md",
  "docs/source_mode_labeling.md",
  "docs/runtime_cli.md",
  "docs/runtime_health_monitor.md",
  "docs/runtime_pipeline.md",
  "docs/runtime_session_manager.md",
  "docs/runtime_state_recovery.md",
  "docs/runtime_scheduler.md",
  "docs/saas_architecture.md",
  "docs/safety_guardrails.md",
  "docs/scanner_risk_engine.md",
  "docs/schema_validation_engine.md",
  "docs/security_authentication.md",
  "docs/secure_config_and_secrets.md",
  "docs/secure_update_framework.md",
  "docs/service_enumeration.md",
  "docs/service_behavior_fingerprints.md",
  "docs/service_lifecycle_readiness.md",
  "docs/secure_node_identity.md",
  "docs/service_mode_readiness.md",
  "docs/service_installer_templates.md",
  "docs/signed_runtime_summary_exchange.md",
  "docs/snapshot_drift_detection.md",
  "docs/stack_stability.md",
  "docs/tamper_detection.md",
  "docs/threat_correlation.md",
  "docs/temporal_anomaly_windows.md",
  "docs/trusted_node_transport.md",
  "docs/tui_dashboard.md",
  "docs/tls_intelligence.md",
  "docs/topology_timeline_views.md",
  "docs/traffic_flow_reconstruction.md",
  "docs/udp_scanning.md",
  "docs/unified_configuration_profiles.md",
  "docs/upgrade_migration_readiness.md",
  "docs/visualization_operator_summary.md",
  "docs/visualization_gui_platform.md",
  "docs/vulnerability_correlation.md",
  "docs/windows_runtime_compatibility.md",
]
"share/portmap-ai/docs/archive" = [
  "docs/archive/PHASE_44_53_INTEGRATION_PLAN.md",
  "docs/archive/PHASE_44_53_PLAN.md",
  "docs/archive/PHASE_54_58_INTEGRATION_PLAN.md",
  "docs/archive/PHASE_54_58_PLAN.md",
]
"share/portmap-ai/docs/examples" = [
  "docs/examples/assets_sample.json",
  "docs/examples/services_sample.json",
  "docs/examples/flows_sample.json",
  "docs/examples/policy_sample.json",
]
"share/portmap-ai/node_configs" = [
  "tests/node_configs/master1.json",
  "tests/node_configs/orchestrator.json",
  "tests/node_configs/worker_orchestrated.json",
]
